# HasStackSTV

./: .gitignore  README.md
HasStackSTV/: HasStackSTV.cabal
HasStackSTV/data/: codereview-stackexchange-com-2015-election-results.blt  example.blt  stackoverflow-com-2011-election-results.blt  stackoverflow-com-2015-election-results.blt
HasStackSTV/src/: Candidate.hs  DData.hs  Election.hs  Main.hs  Vote.hs
HasStackSTV/test/: Main.hs  TestCandidate.hs  TestDData.hs  TestElection.hs  TestMain.hs  TestVote.hs  Vote.hs
src/: Vote.hs
