name: HasStackSTV
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved
stability: provisional
synopsis: Haskell implementation of STV
description:
    A Haskell Implementation of the Single Transferrable Vote system employed by StackExchange for moderator elections
author: ShipsWithCannons, Vogel612

executable HasStackSTV
    main-is: Main.hs
    build-depends:
        base -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Election
        Vote
    ghc-options: -ferror-spans

Test-Suite test-HasStackSTV
    type:   exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        base -any,
        test-framework,
        test-framework-hunit,
        HUnit,
        containers ==0.5.*
    default-language: Haskell2010
    hs-source-dirs: test, src
    other-modules:
        TestVote
        Vote
        Election
    ghc-options: -ferror-spans
